# osom

./: Cargo.toml
.github/workflows/: docs.yml  rust.yml
libs/osom_alloc/: Cargo.toml
libs/osom_alloc/src/: allocator.rs  lib.rs  std_allocator.rs
libs/osom_macros/: Cargo.toml
libs/osom_macros/src/: lib.rs
libs/osom_traits/: Cargo.toml
libs/osom_traits/src/: lib.rs
libs/osom_traits/src/default_impl/: mod.rs  std_allocator.rs
libs/osom_utils/: Cargo.toml
libs/osom_utils/benches/: arrays.rs
libs/osom_utils/src/: lib.rs
libs/osom_utils/src/arrays/: array.rs  dynamic_array.rs  internal.rs  mod.rs
libs/osom_utils/tests/: test_arrays.rs
projects/osom_x64/: Cargo.toml
projects/osom_x64/osom_x64_asm/: Cargo.toml
projects/osom_x64/osom_x64_asm/src/: lib.rs
projects/osom_x64/osom_x64_cg/: Cargo.toml
projects/osom_x64/osom_x64_cg/src/: lib.rs  osom_x64_code_generator.rs  osom_x64_instr_code_generator.rs
projects/osom_x64/osom_x64_core/: Cargo.toml
projects/osom_x64/osom_x64_core/src/: check.rs  lib.rs
projects/osom_x64/osom_x64_core/src/assemblers/release/: assembler.rs  errors.rs  fragment.rs  mod.rs  preassembled_module.rs
projects/osom_x64/osom_x64_core/src/models/: assembler.rs  condition.rs  immediate.rs  instruction.rs  label.rs  machine_size.rs  mod.rs  registers.rs  scale.rs
projects/osom_x64/osom_x64_encoder/: Cargo.toml
projects/osom_x64/osom_x64_encoder/src/: check.rs  constants.rs  lib.rs
projects/osom_x64/osom_x64_encoder/src/encoder/: encoded_instruction.rs  errors.rs  jcc.rs  jmp.rs  misc.rs  mod.rs
projects/osom_x64/osom_x64_encoder/src/models/: condition.rs  machine_size.rs  mod.rs  registers.rs  scale.rs
projects/osom_x64/osom_x64_macros/: Cargo.toml
projects/osom_x64/osom_x64_macros/src/: lib.rs
projects/osom_x64/src/: lib.rs
