[workspace]
members = [
    "libs/osom_alloc",
    "libs/osom_utils",
    "projects/osom_x64/osom_x64_asm",
    "projects/osom_x64/osom_x64_encoder",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Rafal Szefler <rafael.szefler@gmail.com>"]
rust-version = "1.83"

[workspace.dependencies]
rand = "0.8"

# tests
rstest = "0.24"

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
paste = "1.0"
