[package]
name = "osom_utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
osom_alloc = { path = "../osom_alloc" }

[dev-dependencies]
rand = { workspace = true }
criterion = { version = "0.5" }

[[bench]]
name = "arrays"
harness = false
