[package]
name = "osom_x64_cg"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

osom_macros = { path = "../../../libs/osom_macros" }

osom_x64_core = { path = "../osom_x64_core" }
